# RayTracerWin

./: .gitignore  CMakeLists.txt  ColorBuffer.h  Light.h  Math.h  MathHelper.cpp  README.md  RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters  RenderWindow.cpp  RenderWindow.h  WinDraw.sln  WinDraw.vcxproj  WinDraw.vcxproj.filters  main.cpp
Data/: unitychan.mtl
SavedImages/: Output.txt
Src/: ColorBuffer.h  KdTree.cpp  KdTree.h  Light.h  Material.h  Math.cpp  Math.h  MathHelper.cpp  MathHelper.h  MeshShape.cpp  MeshShape.h  Platform.h  RAabb.cpp  RAabb.h  RRay.cpp  RRay.h  RVector.h  RayTracerProgram.cpp  RayTracerProgram.h  RayTracerScene.cpp  RayTracerScene.h  RenderWindow.cpp  RenderWindow.h  Shapes.cpp  Shapes.h  SurfaceMaterials.cpp  SurfaceMaterials.h  Texture.cpp  Texture.h  ThreadTaskQueue.h  ThreadUtils.cpp  ThreadUtils.h  main.cpp
Src/Linux/: RenderWindow_X11.cpp  RenderWindow_X11.h
Src/OSX/: MacOSXBundleInfo.plist  OSXAppDelegate.h  OSXAppDelegate.m  OSXRenderView.h  OSXRenderView.m  OSXWindow.h  OSXWindow.mm
Src/Windows/: RenderWindow.cpp  RenderWindow.h
