CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release")
SET(CMAKE_CXX_STANDARD 11)

PROJECT(RayTracer)
FILE(GLOB SOURCES Src/*.cpp Src/*.h)

IF(APPLE)
    FILE(GLOB SOURCES_PLATFORM Src/OSX/*.m Src/OSX/*.mm Src/OSX/*.h)
	FIND_LIBRARY(APPKIT_LIBRARY AppKit)
	SET(EXTRA_LIBS ${APPKIT_LIBRARY})
ENDIF()

IF(WIN32)
    FILE(GLOB SOURCES_PLATFORM Src/Windows/*.cpp Src/Windows/*.h)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /fp:fast" )
ENDIF()

ADD_EXECUTABLE(RayTracer WIN32 MACOSX_BUNDLE ${SOURCES} ${SOURCES_PLATFORM})
TARGET_LINK_LIBRARIES(RayTracer ${EXTRA_LIBS})

FUNCTION(ASSIGN_SOURCE_GROUP)
    FOREACH(_SOURCE IN ITEMS ${ARGN})
        IF (IS_ABSOLUTE "${_SOURCE}")
            FILE(RELATIVE_PATH _SOURCE_REL "${CMAKE_CURRENT_SOURCE_DIR}" "${_SOURCE}")
        ELSE()
            SET(_SOURCE_REL "${_SOURCE}")
        ENDIF()
        GET_FILENAME_COMPONENT(_SOURCE_PATH "${_SOURCE_REL}" PATH)
        STRING(REPLACE "/" "\\" _SOURCE_PATH_IDE "${_SOURCE_PATH}")
        SOURCE_GROUP("${_SOURCE_PATH_IDE}" FILES "${_SOURCE}")
    ENDFOREACH()
ENDFUNCTION(ASSIGN_SOURCE_GROUP)

ASSIGN_SOURCE_GROUP(${SOURCES} ${SOURCES_PLATFORM})
